--- a/module/Admin/view/template/menu/index.phtml
+++ b/module/Admin/view/template/menu/index.phtml
@@ -6,7 +6,7 @@ $this->headTitle($title);
 <div class="row">
     <h1><?php echo $this->escapeHtml($title); ?></h1>
     <p>
-        <a href="<?php echo $this->serverUrl($this->url('admin-menu', array('action'=>'add')));?>">Add new page</a>
+        <a href="<?php echo $this->serverUrl($this->url('admin-menu', array('action'=>'add')));?>">Add new menu</a>
     </p>
 
     <table class="table">
