--- a/module/Associate/view/template/employee/dashboard.phtml
+++ b/module/Associate/view/template/employee/dashboard.phtml
@@ -1,14 +1,12 @@
 <div class="row">
     <div class="col-md-12">
         <div class="col-md-9">
-            <div class="span4">
-                <blockquote>
-                    <p>Welcome <?php echo $employee->firstname.' '.$employee->lastname; ?>!</p>                    
-                </blockquote>
-                <p>
-                    <i class="glyphicon glyphicon-envelope"></i> <?php echo $employee->email; ?> <br>
-                    <i class="glyphicon glyphicon-time"></i> Since <?php echo $this->dateFormat(new DateTime($employee->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?>
-                </p>
+            <div class="page-header">
+                <h1>Welcome <?php echo $employee->firstname.' '.$employee->lastname; ?>!</h1>
+            </div>
+            <div class="page-body">
+                <i class="glyphicon glyphicon-envelope"></i> <?php echo $employee->email; ?> <br>
+                <i class="glyphicon glyphicon-time"></i> Since <?php echo $this->dateFormat(new DateTime($employee->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?>
             </div>
         </div>
     </div>
