--- a/module/Admin/view/template/menu/edit.phtml
+++ b/module/Admin/view/template/menu/edit.phtml
@@ -25,6 +25,33 @@ $this->headTitle($title);
             </div>
         </div>
         <div class="form-group">
+            <label for="route" class="col-md-2 control-label">Parent Menu</label>
+            <div class="col-md-5">
+                <select class="form-control" name="parent_id">
+                    <option selected="" value="-1">---- Choose from option's ----</option>
+                    <?php foreach($menus as $val){ ?>
+                    <option value="<?php echo $val->id; ?>" <?php if($menu->parent_id == $val->id){ echo 'selected="selected"'; } ?> ><?php echo $val->title; ?></option>
+                    <?php } ?>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="sort_order" class="col-md-2 control-label">Sort Order</label>
+            <div class="col-md-5">
+                <input type="text" class="form-control" value="<?php echo $menu->sort_order; ?>" name="sort_order" placeholder="Sort Order">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="route" class="col-md-2 control-label">Status</label>
+            <div class="col-md-5">
+                <select class="form-control" name="status">
+                    <option selected="" value="-1">---- Choose from option's ----</option>
+                    <option value="active" <?php if($menu->status == 'active'){ echo 'selected="selected"'; } ?>>Active</option>
+                    <option value="inactive" <?php if($menu->status == 'inactive'){ echo 'selected="selected"'; } ?>>In Active</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-7">
                 <button id="btn-signup" type="submit" class="btn btn-primary"><i class="icon-hand-right"></i>
                     Update
