--- a/module/Application/view/partial/head.phtml
+++ b/module/Application/view/partial/head.phtml
@@ -21,3 +21,19 @@
     ->prependFile($this->basePath('front') . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
     ->prependFile($this->basePath('front') . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
 ; ?>
+
+<script type="text/javascript">
+    $(document).ready(function(){
+        $(".dropdown").hover(            
+            function() {
+                $('.dropdown-menu', this).not('.in .dropdown-menu').stop(true,true).slideDown("600");
+                $(this).toggleClass('open');        
+            },
+            function() {
+                $('.dropdown-menu', this).not('.in .dropdown-menu').stop(true,true).slideUp("600");
+                $(this).toggleClass('open');       
+            }
+        );
+    });
+</script>
+    
