--- a/module/Associate/view/template/employee/payslip.phtml
+++ b/module/Associate/view/template/employee/payslip.phtml
@@ -4,7 +4,10 @@ $title = 'My Payslips';
 $this->headTitle($title);
 ?>
 <div class="row">
-    <h1><?php echo $this->escapeHtml($title); ?></h1>
+    <div class="page-header">  
+        <h1><?php echo $this->escapeHtml($title); ?></h1>
+    </div>
+    <div class="page-body">
     <table class="table">
         <tr style="background-color:#2a6496;color: #ffffff">
             <th>Id</th>
@@ -18,11 +21,11 @@ $this->headTitle($title);
                 <td><?php echo $this->escapeHtml($val->employee_id);?></td>
                 <td>
                 <?php 
-                    /* foreach($associate as $value){ 
+                    foreach($associate as $value){ 
                         if($val->employee_id == $value->id){
                             echo $this->escapeHtml($value->username);
                         }
-                    } */
+                    }
                 ?>
                 </td>
                 <td>Payslips for <?php echo date("M-Y",  strtotime($val->createdat));?></td>
@@ -34,4 +37,5 @@ $this->headTitle($title);
             </tr>
         <?php endforeach; ?>
     </table>
+</div>
 </div>
