--- a/module/Associate/view/template/employer/changepass.phtml
+++ b/module/Associate/view/template/employer/changepass.phtml
@@ -1,17 +1,19 @@
 <div class="row">
     <div class="col-md-9">
-        <h1 class="page-title">Update your password</h1>
+         <div class="page-header">
+            <h1>Update your password</h1>
+        </div>
         <div class="page-body">
             <form class="form-horizontal" role="form" method="post" action="<?php echo $this->serverUrl($this->url('company', array('action'=>'changepass'))); ?>">
                 <input type="hidden" name="id" value="<?php echo $id; ?>" />
                 <div class="form-group">
-                    <label for="password" class="col-md-3 control-label">New Password</label>
+                    <label for="password" class="col-md-4 control-label">New Password</label>
                     <div class="col-md-5">
                         <input type="password" class="form-control" name="password" value="" placeholder="New Password" autocomplete="off">
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="confpassword" class="col-md-3 control-label">Confirm Password</label>
+                    <label for="confpassword" class="col-md-4 control-label">Confirm Password</label>
                     <div class="col-md-5">
                         <input type="password" class="form-control" name="confpassword" value="" placeholder="Confirm Password">
                     </div>
