--- a/module/Associate/view/template/employer/edit.phtml
+++ b/module/Associate/view/template/employer/edit.phtml
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="panel-heading">
-        <div class="panel-title">Editing <b><?php echo $company->company; ?></b></div>
+        <h1>Editing <b><?php echo $company->company; ?></b></h1>
     </div>
     <div class="panel-body">
         <form id="signupform" class="form-horizontal" role="form"
