--- a/module/Associate/view/template/employer/employee.phtml
+++ b/module/Associate/view/template/employer/employee.phtml
@@ -4,7 +4,9 @@ $title = 'Manage Employees';
 $this->headTitle($title);
 ?>
 <div class="row">
-    <h1><?php echo $this->escapeHtml($title); ?></h1>
+    <div class="page-header">
+            <h1><?php echo $this->escapeHtml($title); ?></h1>
+    </div>
     <p>
         <a href="<?php echo $this->serverUrl($this->url('company', array('action'=>'addemployee', 'id' => $id)));?>">Add employee</a>
     </p>
@@ -55,7 +57,7 @@ $this->headTitle($title);
                     <a href="<?php echo $this->serverUrl($this->url('company',
                         array('action'=>'emplinfo', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-info-sign"></i></a> &nbsp;
                     <a href="<?php echo $this->serverUrl($this->url('company',
-                        array('action'=>'empledit', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-edit"></i></a> &nbsp;
+                        array('action'=>'editemployee', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-edit"></i></a> &nbsp;
                     <a href="<?php echo $this->serverUrl($this->url('company',
                         array('action'=>'emplsal', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-trash"></i></a>
                 </td>
