--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -88,6 +88,7 @@ div.container a.brand {
 .profile-sidebar {
   padding: 20px 0 10px 0;
   background: #fff;
+  color: #D04235;
 }
 
 .profile-userpic img {
@@ -103,10 +104,11 @@ div.container a.brand {
 .profile-usertitle {
   text-align: center;
   margin-top: 20px;
+  color: #D04235;
 }
 
 .profile-usertitle-name {
-  color: #5a7391;
+  color: #D04235;
   font-size: 16px;
   font-weight: 600;
   margin-bottom: 7px;
@@ -114,7 +116,7 @@ div.container a.brand {
 
 .profile-usertitle-job {
   text-transform: uppercase;
-  color: #5b9bd1;
+  color: #D04235;
   font-size: 12px;
   font-weight: 600;
   margin-bottom: 15px;
@@ -150,7 +152,7 @@ div.container a.brand {
 }
 
 .profile-usermenu ul li a {
-  color: #93a3b5;
+  color: #D04235;
   font-size: 14px;
   font-weight: 400;
 }
@@ -162,7 +164,7 @@ div.container a.brand {
 
 .profile-usermenu ul li a:hover {
   background-color: #fafcfd;
-  color: #5b9bd1;
+  color: #D04235;
 }
 
 .profile-usermenu ul li.active {
@@ -170,9 +172,9 @@ div.container a.brand {
 }
 
 .profile-usermenu ul li.active a {
-  color: #5b9bd1;
+  color: #D04235;
   background-color: #f6f9fb;
-  border-left: 2px solid #5b9bd1;
+  border-left: 2px solid #D04235;
   margin-left: -2px;
 }
 
@@ -506,4 +508,100 @@ background: #428bca;
     display:none;
     text-indent:-9999px;
     background: url('../img/icon_top.png') no-repeat;
+}
+
+.label-info {
+    background-color: #D04235;
+}
+
+#publish_date {
+    background: #c52d2f none repeat scroll 0 0;
+    border-bottom: 5px solid #4e4e4e;
+    color: #fff;
+    padding: 5px 0;
+    text-align: center;
+}
+.blog .blog-item .entry-meta {
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.blog .blog-item .entry-meta > span {
+    color: #ccc;
+}
+.blog .blog-item .entry-meta > span {
+    background: #f5f5f5 none repeat scroll 0 0;
+    border-top: 1px solid #fff;
+    display: block;
+    font-size: 12px;
+    overflow: hidden;
+    padding: 5px;
+    text-align: left;
+}
+.text-center {
+    text-align: center;
+}
+
+.dropdown-menu {
+    margin-top: 0px;
+    min-width: 180px;
+}
+
+.navbar-inverse .navbar-nav .dropdown-menu {
+    background-color: rgba(21, 21, 21, 21);
+  -webkit-box-shadow: 0 3px 8px rgba(21, 21, 21, 21);
+  -moz-box-shadow: 0 3px 8px rgba(21, 21, 21, 21);
+  box-shadow: 0 3px 8px rgba(21, 21, 21, 21);
+  border: 0;
+  padding: 0;
+  margin-top: 0;
+  border-top: 0;
+  border-radius: 0;
+  left: 0;
+}
+
+.navbar-inverse .navbar-nav .dropdown-menu > li > a {
+    color: #fff;
+    padding: 8px 15px;
+}
+
+.navbar-inverse .navbar-nav .dropdown-menu > li > a:hover, 
+.navbar-inverse .navbar-nav .dropdown-menu > li > a:focus {
+    background-color: #c52d2f;
+    color: #262626;
+    text-decoration: none;
+}
+
+.navbar-inverse .navbar-nav .dropdown-menu > .active > a, 
+.navbar-inverse .navbar-nav .dropdown-menu > .active > a:hover, 
+.navbar-inverse .navbar-nav .dropdown-menu > .active > a:focus {
+    background-color: #c52d2f;
+    color: #fff;
+    outline: 0 none;
+    text-decoration: none;
+}
+
+.navbar-inverse .navbar-nav .dropdown-menu > li:last-child > a {
+    border-radius: 0 0 3px 3px;
+}
+.navbar-inverse .navbar-nav .dropdown-menu > li.divider {
+    background-color: transparent;
+} 
+
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus,
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover,
+.navbar-inverse .navbar-nav > .open > a:focus {
+  background-color: #c52d2f;
+  color: #fff;
+}
+
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
+    background-color: #c52d2f;
+    background-image: linear-gradient(to bottom, #c52d2f 0px, #c52d2f 100%);
+    background-repeat: repeat-x;
+    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.25) inset;
+    color: #fff;
 }
