Updated mega menu

--- a/module/Application/view/partial/header.phtml
+++ b/module/Application/view/partial/header.phtml
@@ -39,7 +39,7 @@
                 <?php // <-- Update this !!
                     echo $this->navigation('left')
                         ->menu()
-                        ->setPartial('partial/menu.phtml')
+                        ->setPartial('partial/menu')
                         ->setMinDepth(0)
                         ->setMaxDepth(1)
                         ->setUlClass('nav navbar-nav')
