--- a/module/Application/view/partial/menu.phtml
+++ b/module/Application/view/partial/menu.phtml
@@ -1,10 +1,10 @@
-<ul  id="menu" >
+<!--<ul  id="menu" >
 
-    <?php /* foreach ($this->container as $page): ?>
+    <?php foreach ($this->container as $page): ?>
 
         <li <?= $page->isActive()? 'class="active"' : 'class="drop"' ?>>
 
-            <?php // echo $this->navigation()->menu()->htmlify($page). PHP_EOL ?>
+            <?php echo $this->navigation()->menu()->htmlify($page). PHP_EOL ?>
 
      <div class="dropdown_2columns" >
 
@@ -31,9 +31,9 @@
 
                       <?php endforeach; ?>
 
-                </div><!-- End dropdown container -->
+                </div> End dropdown container 
 
                     </li>
 
-                <?php endforeach; */ ?>
- </ul>
+                <?php endforeach; ?>
+ </ul>-->
