--- a/module/User/view/template/index/companyregister.phtml
+++ b/module/User/view/template/index/companyregister.phtml
@@ -27,35 +27,35 @@
                             <label for="firstname" class="col-md-3 control-label">First Name</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="firstname" placeholder="First Name">
+                                <input required="required" type="text" class="form-control" name="firstname" placeholder="First Name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="lastname" class="col-md-3 control-label">Last Name</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="lastname" placeholder="Last Name">
+                                <input required="required" type="text" class="form-control" name="lastname" placeholder="Last Name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="email" class="col-md-3 control-label">Email</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="email" placeholder="Email Address">
+                                <input required="required" type="text" class="form-control" name="email" placeholder="Email Address">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="password" class="col-md-3 control-label">Password</label>
 
                             <div class="col-md-6">
-                                <input type="password" class="form-control" name="password" placeholder="Password">
+                                <input required="required" type="password" class="form-control" name="password" placeholder="Password">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="conf-password" class="col-md-3 control-label">Confirm Password</label>
 
                             <div class="col-md-6">
-                                <input type="password" class="form-control" name="conf-password" placeholder="Confirm Password">
+                                <input required="required" type="password" class="form-control" name="conf-password" placeholder="Confirm Password">
                             </div>
                         </div>
                         <div class="form-group">
@@ -96,7 +96,7 @@
                             <label for="address1" class="col-md-3 control-label">Address Line 1</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="address1" placeholder="Address Line 1">
+                                <input required="required" type="text" class="form-control" name="address1" placeholder="Address Line 1">
                             </div>
                         </div>
                         <div class="form-group">
@@ -136,14 +136,14 @@
                         <div class="form-group">
                             <label for="city" class="col-md-3 control-label">City</label>
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="city" placeholder="City">
+                                <input required="required" type="text" class="form-control" name="city" placeholder="City">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="postcode" class="col-md-3 control-label">Postcode</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="postcode" placeholder="Postcode">
+                                <input required="required" type="text" class="form-control" name="postcode" placeholder="Postcode">
                             </div>
                         </div>
                         <div class="form-group">
