--- a/module/User/view/template/index/jobseekerregister.phtml
+++ b/module/User/view/template/index/jobseekerregister.phtml
@@ -13,35 +13,35 @@
                             <label for="firstname" class="col-md-3 control-label">First Name</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="firstname" placeholder="First Name">
+                                <input required="required" type="text" class="form-control" name="firstname" placeholder="First Name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="lastname" class="col-md-3 control-label">Last Name</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="lastname" placeholder="Last Name">
+                                <input required="required" type="text" class="form-control" name="lastname" placeholder="Last Name">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="email" class="col-md-3 control-label">Email</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="email" placeholder="Email Address">
+                                <input required="required" type="text" class="form-control" name="email" placeholder="Email Address">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="password" class="col-md-3 control-label">Password</label>
 
                             <div class="col-md-6">
-                                <input type="password" class="form-control" name="password" placeholder="Password">
+                                <input required="required" type="password" class="form-control" name="password" placeholder="Password">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="state" class="col-md-3 control-label">Current State</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="state" placeholder="State">
+                                <input required="required" type="text" class="form-control" name="state" placeholder="State">
                             </div>
                         </div>
 
