--- a/module/Admin/view/layout/empty.phtml
+++ b/module/Admin/view/layout/empty.phtml
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <?php echo $this->headTitle('HR '. $this->translate('Consultancy'))->setSeparator(' - ')->setAutoEscape(false) ?>
+        <?php echo $this->headTitle('Goyal HR '. $this->translate('Consultaning'))->setSeparator(' - ')->setAutoEscape(false) ?>
 
         <?php echo $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
@@ -58,7 +58,7 @@
         <footer class="navbar navbar-default navbar-fixed-bottom">
             <div class="container">
                 <p class="navbar-text pull-left">
-                    &copy; 2005 - <?php echo date('Y') ?> by Zend Technologies Ltd. <?php echo $this->translate('All rights reserved.') ?>
+                    &copy; 2005 - <?php echo date('Y') ?> by Goyal HR Consultant. <?php echo $this->translate('All rights reserved.') ?>
                 </p>
             </div>
         </footer>
