--- a/module/Application/view/template/index/index.phtml
+++ b/module/Application/view/template/index/index.phtml
@@ -129,7 +129,7 @@
                         Goyal HR offers a unique combination of experience, methodology, and professional commitment that makes us the easy choice as your HR partner in meeting your career goals. 
                     </p>
                     <p>
-                        Learn more about our services by and there's never a fee to job seekers for our employment services.
+                        Learn more about our services by and There's never a fee to job seekers for our employment services.
                     </p>
                 </div>
             </div>
