--- a/module/Admin/view/layout/admin.phtml
+++ b/module/Admin/view/layout/admin.phtml
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <?php echo $this->headTitle('HR Consultancy - Admin')->setSeparator(' - ')->setAutoEscape(false) ?>
+    <?php echo $this->headTitle('Goyal HR Consultaning - Admin')->setSeparator(' - ')->setAutoEscape(false) ?>
 
     <?php echo $this->headMeta()
         ->appendName('viewport', 'width=device-width, initial-scale=1.0')
@@ -129,7 +129,7 @@
 <footer class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
         <p class="navbar-text pull-left">
-            &copy; 2005 - <?php echo date('Y') ?> by Zend Technologies Ltd. <?php echo $this->translate('All rights reserved.') ?>
+            &copy; 2005 - <?php echo date('Y') ?> by Goyal HR Consultant. <?php echo $this->translate('All rights reserved.') ?>
         </p>
     </div>
 </footer>
