--- a/module/User/view/template/index/jobseekerregister.phtml
+++ b/module/User/view/template/index/jobseekerregister.phtml
@@ -1,4 +1,13 @@
 <div class="row">
+    <?php
+        if ($this->messages) {
+            echo '<ul>';
+            foreach ($this->messages as $message) {
+                echo '<li>' . $message . '</li>';
+            }
+            echo '</ul>';
+        }
+    ?>
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-lg-12">
         <div id="signupbox" class="mainbox col-lg-10">
             <div class="panel panel-info">
@@ -38,18 +47,24 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="state" class="col-md-3 control-label">Current State</label>
-
-                            <div class="col-md-6">
-                                <input required="required" type="text" class="form-control" name="state" placeholder="State">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
                             <label for="country" class="col-md-3 control-label">Current Country</label>
 
                             <div class="col-md-6">
-                                <input type="text" class="form-control" name="country" placeholder="Country">
+                                <select id="country" class="form-control" onchange="getregion(this) " name="country">
+                                    <option selected="" value="-1">---- Select country ----</option>
+                                    <?php foreach($countrys as $val){ ?>
+                                    <option value="<?php echo $val->iso; ?>"><?php echo $val->nicename; ?></option>
+                                    <?php } ?>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="state" class="col-md-3 control-label">Current State</label>
+                            <div class="col-md-6">
+                                <select id="statedrop" class="form-control" name="state" onchange="setState();">
+                                    <option value="">---- Select state ----</option>
+                                </select>
+                                <input id="statetext" type="text" class="form-control" name="state" placeholder="State" style="display:none">
                             </div>
                         </div>
                         <div class="form-group">
@@ -77,3 +92,60 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    function getregion(obj){
+	jQuery.ajax({
+		url: '/ajax/region',
+		type: 'POST',
+		dataType: 'JSON',
+		data: {'country': jQuery('#country').val()},
+		success: function(data, status){
+                    $('#statedrop').find('option').remove().end().append('<option value="">---- Select state ----</option>').val(' ');
+                    if(data.status == 'error'){
+                        // Perform any operation on error
+                        $('#statetext').css("display","block");
+                        $('#statedrop').css("display","none");
+                        $('#statetext').val("");
+                        
+                    }else{
+                        $('#statetext').css("display","none");
+                        $('#statedrop').css("display","block");
+                        // Perform any operation on success);
+                        var region = JSON.parse(JSON.stringify(data.region));
+                        for(i = 0; i < data.region.length; i++){
+                            $('#statedrop').append($('<option>', { 
+                                value: region[i].code,
+                                text : region[i].title 
+                            }));
+                        }
+                    }
+		},
+		error : function(xhr, textStatus, errorThrown) {
+                    if (xhr.status === 0) {
+                        alert('Not connect.\n Verify Network.');
+                    } else if (xhr.status == 404) {
+                        alert('Requested page not found. [404]');
+                    } else if (xhr.status == 500) {
+                        alert('Server Error [500].');
+                    } else if (errorThrown === 'parsererror') {
+                        alert('Requested JSON parse failed.');
+                    } else if (errorThrown === 'timeout') {
+                        alert('Time out error.');
+                    } else if (errorThrown === 'abort') {
+                        alert('Ajax request aborted.');
+                    } else {
+                        alert('There was some error. Try again.');
+                    }
+		},
+		complete: function(){
+                    // Perform any operation need on success/error
+		}
+	});
+    }
+    
+    function setState(){ 
+        $('#statetext').val($('#statedrop').val());
+    }
+
+</script>
