--- a/module/Contact/view/template/index/index.phtml
+++ b/module/Contact/view/template/index/index.phtml
@@ -49,6 +49,12 @@ $this->headTitle($title);
                                 </div>
                             </div>
                             <div class="form-group">
+                                <label for="email" class="col-md-2 control-label">Phone <em>*</em></label>
+                                <div class="col-md-5">
+                                    <input type="text" class="form-control" value="" name="phone" placeholder="Phone" required="required">
+                                </div>
+                            </div>
+                            <div class="form-group">
                                 <label for="message" class="col-md-2 control-label">Message <em>*</em></label>
                                 <div class="col-md-7">
                                     <textarea name="message" class="form-control" placeholder="Message" required="required"></textarea>
