--- a/module/User/view/template/index/forgetpass.phtml
+++ b/module/User/view/template/index/forgetpass.phtml
@@ -3,10 +3,10 @@
         <div class="panel panel-info">
             <div class="panel-heading"><h3 class="panel-title"><strong>Forget password?</strong></h3></div>
             <div class="panel-body">
-                <form role="form">
+                <form role="form" method="post" action="<?php echo $this->serverUrl($this->url('forgetpass')); ?>">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Username or Email</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                        <input type="email" name="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
                     </div>
                     <button type="submit" class="btn btn-sm btn-info">Request Password</button>
                 </form>
